# giga_agent

./: .docker.env.example  .env.example  .gitignore  CLOUD_RU_SETUP.md  EXAMPLES.md  LICENSE  Makefile  README.md  SUBAGENTS.md  TOOLS.md  docker-compose.yml
backend/graph/: .dockerignore  Makefile  langgraph.json  pyproject.toml
backend/graph/giga_agent/: cli.py  config.py  dump.json  tasks_app.py  tool_graph.py
backend/graph/giga_agent/agents/gis_agent/: config.py  graph.py  page.html
backend/graph/giga_agent/agents/landing_agent/: config.py  graph.py  tools.py
backend/graph/giga_agent/agents/lean_canvas/: __init__.py
backend/graph/giga_agent/agents/meme_agent/: config.py  graph.py
backend/graph/giga_agent/agents/podcast/: config.py  constants.py  graph.py  prompts.py  schema.py  tts_sber.py  utils.py
backend/graph/giga_agent/agents/presentation_agent/: config.py  graph.py
backend/graph/giga_agent/generators/image/: __init__.py  fusion_brain.py  gigachat.py  image_gen.py  openai.py
backend/graph/giga_agent/output_parsers/: html_parser.py
backend/graph/giga_agent/prompts/: few_shots.py  image.py  main_prompt.py
backend/graph/giga_agent/repl_tools/: llm.py  sentiment.py  utils.py
backend/graph/giga_agent/repl_tools/models/: README.md  sentiment_logreg.joblib  sentiment_model.ipynb  (+1 more)
backend/graph/giga_agent/tool_server/: tool_client.py  tool_server.py
backend/graph/giga_agent/tools/: another.py  cve.py  github.py  python.py  scraper.py  vk.py  weather.py
backend/graph/giga_agent/utils/: env.py  jupyter.py  lang.py  llm.py  messages.py  python.py
(+85 files in other folders)
